<resources>
    <string name="app_name">ShoppingList</string>

    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>

    <string name="shopping_list">Shopping List</string>
    <string name="product">Product</string>
    <string name="product_name">Name</string>
    <string name="product_amount">Amount</string>

    <string name="add">Add</string>
    <string name="sort_Name">Sort Name</string>
    <string name="sort_Amount">Sort Amount</string>
    <string name="delete_selected">Delete selected</string>
    <string name="delete_all">Delete All</string>

    <string name="product_name_label">Name:</string>
    <string name="login_header">Welcome to List</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>

    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>

</resources>