<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/shoppingListHeading"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/shopping_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListHeading">

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/productAmount"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_amount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/deleteAll"
            android:text="@string/delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sortNameBtn"
            android:text="@string/sort_Name"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sortAmountBtn"
            android:text="@string/sort_Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




    <TextView
        android:id="@+id/productNameHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/productAmountHeader"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3" />

    <TextView
        android:id="@+id/productAmountHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_amount"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/productNameHeader"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameHeader" />


</androidx.constraintlayout.widget.ConstraintLayout>